--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,36 @@
 <header>
-<div class="logo">Logo</div>
-<nav>
-  <ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="/about-us">About Us</a></li>
-    <li><a href="/careers">Careers</a></li>
-    <li><a href="/contact-us">Contact Us</a></li>
-  </ul>
-</nav>
+  <div class="container">
+    <nav class="navbar navbar-toggleable-md">
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+      <a class="navbar-brand" href="/">
+        <img src="../assets/images/logo.png" alt="Quadraphic">
+      </a>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto qa-navbar">
+          <li class="nav-item qa-navbar__item"><a class="nav-link qa-navbar__link" routerLink="/" routerLinkActive="active">Home</a></li>
+          <li class="nav-item qa-navbar__item"><a class="nav-link qa-navbar__link" routerLink="/about-us" routerLinkActive="active">About Us</a></li>
+          <li class="nav-item qa-navbar__item"><a class="nav-link qa-navbar__link" routerLink="/careers" routerLinkActive="active">Careers</a></li>
+          <li class="nav-item qa-navbar__item"><a class="nav-link qa-navbar__link" routerLink="/contact-us" routerLinkActive="active">Contact Us</a></li>
+        </ul>
+      </div>
+      <ul class="qa-social">
+        <li class="qa-social__item">
+          <a class="qa-social__link btn btn-social-icon btn-twitter">
+            <span class="fa fa-twitter"></span>
+          </a>
+        </li>
+        <li class="qa-social__item">
+          <a class="qa-social__link btn btn-social-icon btn-facebook">
+            <span class="fa fa-facebook"></span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+
+  </div>
+
 </header>
